--- a/.github/workflows/pbrp-organization-ci.yml
+++ b/.github/workflows/pbrp-organization-ci.yml
@@ -14,11 +14,11 @@ on:
 env:
   BUILD_RELEASE_TYPE: ${{ github.event.inputs.DEPLOY_TYPE }}
   CHANGELOG: ${{ github.event.inputs.ChangeLogs }}
-  BOT_API: ${{ secrets.BOT_API }}
-  GCF_AUTH_KEY: ${{ secrets.GCF_AUTH_KEY }}
-  GH_BOT_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
-  GitHubMail: ${{ secrets.GitHubMail }}
-  GitHubName: ${{ secrets.GitHubName }}
+  #BOT_API: ${{ secrets.BOT_API }}
+  #GCF_AUTH_KEY: ${{ secrets.GCF_AUTH_KEY }}
+  #GH_BOT_TOKEN: ${{ secrets.GH_BOT_TOKEN }}
+  #GitHubMail: ${{ secrets.GitHubMail }}
+  #GitHubName: ${{ secrets.GitHubName }}
   #SFPassword: ${{ secrets.SFPassword }}
   #SFUserName: ${{ secrets.SFUserName }}
   TARGET: "pbrp"
