--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,4 +1,4 @@
-name: Recovery Build
+name: Recovery Build CI
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
         description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
         #default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp'
-		    default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0'
+        default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-9.0'
       MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
