--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -6,8 +6,8 @@ on:
       MANIFEST_URL:
         description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
-        default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni'
-        #default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-8.1'
+        #default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni'
+        default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-8.1'
       MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
