--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -6,12 +6,12 @@ on:
       MANIFEST_URL:
         description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
-        #default: 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni'
-        default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-8.1'
+        default: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni
+        #default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-8.1'
       MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
-        default: 'android-8.1'
+        default: 'twrp-8.1'
       DEVICE_TREE_URL:
         description: 'DEVICE_TREE_URL'
         required: true
@@ -27,9 +27,11 @@ on:
       COMMON_TREE_URL:
         description: 'COMMON_TREE_URL (if no common tree, leave blank)'
         required: false
+        default: 'https://github.com/mi-msm8937/android_device_xiaomi_riva/tree/lineage-18.1'
       COMMON_PATH:
         description: 'COMMON_PATH (if no common tree, leave blank)'
         required: false
+        default: device/common
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
