--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -27,11 +27,11 @@ on:
       COMMON_TREE_URL:
         description: 'COMMON_TREE_URL (if no common tree, leave blank)'
         required: false
-        default: 'https://github.com/mi-msm8937/android_device_xiaomi_riva/tree/lineage-18.1'
+        default: https://android.googlesource.com/device/common'
       COMMON_PATH:
         description: 'COMMON_PATH (if no common tree, leave blank)'
         required: false
-        default: device/common
+        default: 'refs/heads/oreo-release'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
