--- a/.github/workflows/pbrp-organization-ci.yml
+++ b/.github/workflows/pbrp-organization-ci.yml
@@ -40,12 +40,12 @@ jobs:
               if [[ ${BUILD_RELEASE_TYPE} == "BETA" ]]; then echo "BETA_BUILD=true"  >> $GITHUB_ENV;fi
               if [[ ${BUILD_RELEASE_TYPE} == "OFFICIAL" ]]; then echo "PB_OFFICIAL=true"  >> $GITHUB_ENV;fi
        - name: Checkout Cleaning Up Runner Repo
-         uses: actions/checkout@v2
-         with:
+         uses: rokibhasansagar/slimhub_actions@main
+         #with:
            #repository: PitchBlackRecoveryProject/Cleaner
            #ref: main
            #token: ${{ secrets.GH_BOT_TOKEN }}
-           path: .github/actions/Cleaner
+           #path: .github/actions/Cleaner
        - name: Cleaning
          uses: ./.github/actions/Cleaner
 
