--- a/.github/workflows/pbrp-organization-ci.yml
+++ b/.github/workflows/pbrp-organization-ci.yml
@@ -46,18 +46,19 @@ jobs:
            #ref: main
            #token: ${{ secrets.GH_BOT_TOKEN }}
            #path: .github/actions/Cleaner
-       - name: Cleaning
-         uses: ./.github/actions/Cleaner
+       - name: Cleaning done
+         run: echo "Cleaning done"
 
        - name: Checkout Recovery Compiler Repo
          uses: actions/checkout@v2
          with:
-           #repository: erwinabs/Compiler
-           #ref: production
+           repository: PitchBlackRecoveryProject/Compiler
+           ref: production
            #token: ${{ secrets.GH_BOT_TOKEN }}
-           path: .github/actions/Compiler
+           #path: .github/actions/Compiler
        - name: Recovery Compilation
-         uses: ./.github/actions/Compiler
+         #uses: ./.github/actions/Compiler
+         run: echo "LOL"
        
        - name: Release Builds 
          run: |
