--- a/.github/workflows/pbrp-organization-ci.yml
+++ b/.github/workflows/pbrp-organization-ci.yml
@@ -55,9 +55,9 @@ jobs:
            repository: PitchBlackRecoveryProject/Compiler
            ref: production
            #token: ${{ secrets.GH_BOT_TOKEN }}
-           #path: .github/actions/Compiler
+           path: .github/actions/Compiler
        - name: Recovery Compilation
-         #uses: ./.github/actions/Compiler
+         uses: ./.github/actions/Compiler
          run: echo "LOL"
        
        - name: Release Builds 
