--- a/.github/workflows/pbrp-organization-ci.yml
+++ b/.github/workflows/pbrp-organization-ci.yml
@@ -58,7 +58,7 @@ jobs:
            path: .github/actions/Compiler
        - name: Recovery Compilation
          uses: ./.github/actions/Compiler
-         run: echo "LOL"
+         #run: echo "LOL"
        
        - name: Release Builds 
          run: |
